JBR-407 - reporting transactions